--- a/weedWeb/src/app/home/home.component.html
+++ b/weedWeb/src/app/home/home.component.html
@@ -154,7 +154,6 @@
   <h1>Conoce nuestro equipo de trabajo</h1>
 </div>
 
-  <!-- Team -->
 <section>
   <div class="container1">
         <div class="card">
@@ -217,7 +216,7 @@
                 <span class="profession">Desarrollador fullstack</span>
               </div>
               <div class="about">
-                <p>Soy una desarrolladora junior</p>
+                <p>Soy un desarrollador junior</p>
               </div>
             </div>
           </div>
@@ -238,7 +237,7 @@
                 <span class="profession">Desarrollador frontend</span>
               </div>
               <div class="about">
-                <p>Soy una desarrolladora junior</p>
+                <p>Soy un desarrollador junior</p>
               </div>
             </div>
           </div>
@@ -264,7 +263,7 @@
                 <span class="profession">Desarrollador backend</span>
               </div>
               <div class="about">
-                <p>Soy una desarrolladora junior</p>
+                <p>Soy un desarrollador junior</p>
               </div>
             </div>
           </div>
@@ -286,7 +285,7 @@
                 <span class="profession">Desarrollador backend</span>
               </div>
               <div class="about">
-                <p>Soy una desarrolladora junior</p>
+                <p>Soy un desarrollador junior</p>
               </div>
             </div>
           </div>
@@ -336,16 +335,14 @@
         </div>
       </div>
     </section>
-    <div class="tittle2" name="desarrollo" id="desarrollo">
+    <div class="tittle2" name="quienes_somos" id="quienes_somos">
       <h1>Quienes somos</h1>
     </div>
     <section>
-      <div class="card" style="width: 18rem;">
-        <img src="../../assets/image/quienes_somos.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
+      
+        <img src="../../assets/image/quienes_somos.jpg" class="img-fluid" alt="...">
+        <p class="text-center fs-1 fw-bold">WEED WEB</p>
+        <p class="lh-base font-monospace text-center">Somos una empresa dedicada a la logistica</p>
     </section>
     <br>
     <br>
