--- a/weedWeb/src/app/register/register.component.html
+++ b/weedWeb/src/app/register/register.component.html
@@ -47,76 +47,98 @@
       </h1>
     </div>
   </div>
+  <div class="container box"></div>
+
 
   <div class="register-container">
     <div class="container">
-      <form>
+      <form [formGroup]="forma">
         <h2 class="text-center">Registrarse</h2>
         <div class="form-row">
-          <div class="form-group col-md-12">
+          <div class="form-group col-md-12 mt-1" >
             <label>Nombre</label>
             <input
               type="text"
-              name="userRegister.firstName"
+              formControlName= "nombre"
+              [class.is-invalid]="validacionNombre"
+              name="nombre"
               [(ngModel)]="userRegister.first_name"
               class="form-control"
               required
             />
+            <small *ngIf="validacionNombre" class="text-danger">El nombre es un campo requerido</small>
           </div>
 
-          <div class="form-group col-md-12">
+          <div class="form-group col-md-12 mt-1">
             <label>Apellido</label>
             <input
+              formControlName="apellido"
+              [class.is-invalid] = "validacionApellido"
               type="text"
               name="userRegister.lastName"
               [(ngModel)]="userRegister.last_name"
               class="form-control"
               required
             />
+            <small *ngIf="validacionApellido" class="text-danger">El apellido es un campo requerido</small>
           </div>
 
-          <div class="form-group col-md-12">
+          <div class="form-group col-md-12 mt-1">
             <label>Cédula</label>
             <input
+              formControlName="cedula"
+              [class.is-invalid] = "validacionCedula"
               type="text"
               name="userRegister.nationalId"
               [(ngModel)]="userRegister.national_id"
               class="form-control"
               required
             />
+            <small *ngIf="validacionCedula" class="text-danger" >Ingrese una cédula válida</small>
           </div>
 
-          <div class="form-group col-md-12">
+          <div class="form-group col-md-12 mt-1">
             <label>Email</label>
             <input
+              formControlName="email"
+              [class.is-invalid] = "validacionEmail"
               type="email"
               name="userRegister.email"
               [(ngModel)]="userRegister.email"
               class="form-control"
               required
             />
+            <small *ngIf="validacionEmail" class="text-danger">Ingrese un email válido</small>
           </div>
 
-          <div class="form-group col-md-12">
+          <div class="form-group col-md-12 mt-1">
             <label>Contraseña</label>
             <input
+              formControlName="password"
+              [class.is-invalid] = "validacionPassword"
               type="password"
               name="userRegister.password"
               [(ngModel)]="userRegister.password"
               class="form-control"
               required
             />
+            <small *ngIf="validacionPassword" class="text-danger">
+              Ingrese una contraseña de minímo 8 carácteres
+            </small>
           </div>
 
-          <div class="form-group col-md-12">
+          <div class="form-group col-md-12 mt-1">
             <label>Número teléfonico</label>
             <input
+              formControlName="telefono"
+              [class.is-invalid] = "validacionTelefono"
               type="number"
               name="userRegister.phone_number"
               [(ngModel)]="userRegister.phone_number"
               class="form-control"
               required
             />
+            <small *ngIf="validacionTelefono" class="text-danger">Ingrese un número teléfonico válido</small>
           </div>
         </div>
         <div class="register-button">
@@ -132,3 +154,4 @@
     </div>
   </div>
 </div>
+
